add stats, use primevue
